--- a/src/components/oauth-application/appsco-manage-oauth-application-components-page.html
+++ b/src/components/oauth-application/appsco-manage-oauth-application-components-page.html
@@ -22,8 +22,7 @@
                 @apply(--layout-horizontal);
                 @apply(--layout-wrap);
                 @apply(--layout-justified);
-                font-size: 14px;
-                color: var(--primary-text-color);
+                @apply(--appsco-components-page);
 
                 --paper-card: {
                     width: 100%;
