Style components improvements

--- a/src/components/access-on-boarding/appsco-access-on-boarding-roles-item.html
+++ b/src/components/access-on-boarding/appsco-access-on-boarding-roles-item.html
@@ -38,7 +38,7 @@
                 --paper-checkbox-checked-color: var(--primary-text-color);
             }
             appsco-account-image {
-                --account-initials-background-color: var(--access-on-boarding-roles-item-initials-background-color);
+                --account-initials-background-color: var(--report-account-initials-background-color);
             }
             iron-collapse {
                 @apply(--shadow-elevation-2dp);
@@ -99,7 +99,7 @@
                 @apply(--primary-button);
                 @apply(--shadow-elevation-2dp);
                 color: var(--primary-text-color);
-                background-color: var(--background-color);
+                background-color: var(--item-background-color);
                 border: none;
 
             }
