--- a/src/components/account/appsco-account-item.html
+++ b/src/components/account/appsco-account-item.html
@@ -26,7 +26,7 @@ Account item is used to present account in form of an item.
 Custom property | Description | Default
 ----------------|-------------|----------
 `--appsco-list-item` | Mixin for the list item | `{}`
-`--background-color` | Background color applied to list item element | `#fff`
+`--item-background-color` | Background color applied to list item element | `#fff`
 `--color` | Color applied to all the text | `#333`
 
 @demo demo/appsco-account-item.html
