--- a/src/components/application/appsco-application-subscriber.html
+++ b/src/components/application/appsco-application-subscriber.html
@@ -59,7 +59,7 @@ Example:
                 border-radius: 3px;
                 overflow: hidden;
                 position: relative;
-                background-color: var(--background-color, #fafafa);
+                background-color: var(--item-background-color, #fafafa);
                 cursor: pointer;
             @apply(--appsco-application-subscriber);
             }
