--- a/src/components/application/company/appsco-company-resource-item.html
+++ b/src/components/application/company/appsco-company-resource-item.html
@@ -26,7 +26,7 @@ Presents company resource in form of an item.
 Custom property | Description | Default
 ----------------|-------------|----------
 `--appsco-list-item` | Mixin for list item | `{}`
-`--background-color` | Background color applied to the item | `#fff`
+`--item-background-color` | Background color applied to the item | `#fff`
 `--color` | Color applied to text inside item | `#333`
 -->
 
