--- a/src/components/contact/appsco-contact-application.html
+++ b/src/components/contact/appsco-contact-application.html
@@ -70,7 +70,7 @@
                 border-radius: 3px;
                 overflow: hidden;
                 position: relative;
-                background-color: var(--background-color, #fafafa);
+                background-color: var(--item-background-color, #fafafa);
                 @apply(--appsco-contact-application);
             }
             :host .assignee:hover {
