--- a/src/components/group/appsco-company-group-item.html
+++ b/src/components/group/appsco-company-group-item.html
@@ -27,7 +27,7 @@ Presents group in form of an item.
 
 Custom property | Description | Default
 ----------------|-------------|----------
-`--background-color` | Background color applied to the root element | `#fff`
+`--item-background-color` | Background color applied to the root element | `#fff`
 `--color` | Color applied to all the text | `#33`
 `--appsco-company-group-item` | Mixin applied to group item element | `{}`
 `--group-basic-info` | Mixin applied to the basic info | `{}`
