--- a/src/components/account/appsco-invitation-item.html
+++ b/src/components/account/appsco-invitation-item.html
@@ -25,7 +25,7 @@ Invitation item is used to present invitation in form of an item.
 
 Custom property | Description | Default
 ----------------|-------------|----------
-`--background-color` | Background color applied to the root element | `#fff`
+`--item-background-color` | Background color applied to the root element | `#fff`
 `--color` | Color applied to all the text | `#33`
 `--appsco-invitation-item` | Mixin applied to the root element | `{}`
 `--invitation-basic-info` | Mixin applied to the basic info | `{}`
@@ -58,7 +58,7 @@ Custom property | Description | Default
                 box-sizing: border-box;
                 overflow: hidden;
                 position: relative;
-                background-color: var(--background-color, #fff);
+                background-color: var(--item-background-color, #fff);
                 border-radius: 3px;
                 @apply(--shadow-elevation-2dp);
                 @apply(--layout-horizontal);
