--- a/src/components/account/company/appsco-account-groups-item.html
+++ b/src/components/account/company/appsco-account-groups-item.html
@@ -30,7 +30,7 @@
                 box-sizing: border-box;
                 overflow: hidden;
                 position: relative;
-                background-color: var(--background-color, #ffffff);
+                background-color: var(--item-background-color, #ffffff);
                 border-radius: 3px;
                 @apply(--shadow-elevation-2dp);
                 @apply(--layout-horizontal);
