--- a/src/components/application/company/appsco-application-assignee.html
+++ b/src/components/application/company/appsco-application-assignee.html
@@ -60,7 +60,7 @@ Example:
                 border-radius: 3px;
                 overflow: hidden;
                 position: relative;
-                background-color: var(--background-color, #fafafa);
+                background-color: var(--item-background-color, #fafafa);
                 cursor: pointer;
             @apply(--appsco-application-assignee);
             }
