--- a/src/components/components/appsco-list-item-styles.html
+++ b/src/components/components/appsco-list-item-styles.html
@@ -22,7 +22,7 @@
                 height: 70px;
                 padding: 0 10px;
                 overflow: hidden;
-                background-color: var(--background-color, #fff);
+                background-color: var(--item-background-color, #fff);
                 color: var(--color, #414042);
                 box-sizing: border-box;
                 border-radius: 3px;
