--- a/src/components/customer/appsco-customer-item.html
+++ b/src/components/customer/appsco-customer-item.html
@@ -27,7 +27,7 @@ Presents customer in form of an item.
 
 Custom property | Description | Default
 ----------------|-------------|----------
-`--background-color` | Background color applied to the root element | `#fff`
+`--item-background-color` | Background color applied to the root element | `#fff`
 `--color` | Color applied to all the text | `#33`
 `--appsco-customer-item` | Mixin applied to customer item element | `{}`
 `--group-basic-info` | Mixin applied to the basic info | `{}`
