--- a/src/components/vault/appsco-vault-item.html
+++ b/src/components/vault/appsco-vault-item.html
@@ -26,7 +26,7 @@ Is used to present vault item as tile.
 
 Custom property | Description | Default
 ----------------|-------------|----------
-`--background-color` | Background color of the item | `#ffffff`
+`--item-background-color` | Background color of the item | `#ffffff`
 `--item-text-color` | Text color of the item | `#273441`
 `--vault-login-color` | Theme color fot item of type Login | `--google-blue-700`
 `--vault-credit-card-color` | Theme color fot item of type Credit Card | `--paper-purple-700`
@@ -52,7 +52,7 @@ Custom property | Description | Default
                 overflow: hidden;
                 @apply(--shadow-elevation-2dp);
                 position: relative;
-                background-color: var(--background-color, #ffffff);
+                background-color: var(--item-background-color, #ffffff);
                 color: var(--item-text-color, #273441);
                 padding: 0 4px;
                 @apply(--appsco-vault-item);
