DASH-3528 Access on-boarding text when the page is empty

--- a/src/components/access-on-boarding/appsco-access-on-boarding-roles.html
+++ b/src/components/access-on-boarding/appsco-access-on-boarding-roles.html
@@ -266,7 +266,7 @@
                 });
 
                 if (0 === this._listItems.length) {
-                    this._showMessage('You have removed all ' + this._typeDisplay + 's from company.');
+                    this._showMessage('You have removed all ' + this._typeDisplay + 's in company.');
                     this._handleEmptyLoad();
                 }
             },
