--- a/src/components/components/appsco-list-behavior.html
+++ b/src/components/components/appsco-list-behavior.html
@@ -551,7 +551,7 @@
                     return 'policie';
 
                 case 'access-on-boarding-user':
-                    return 'access on-boarding user';
+                    return 'unresolved access on-boarding event';
 
                 default:
                     return type;
