DASH-3496 [Frontend] Get back the Personal dashboard filters

--- a/src/components/application/appsco-application-actions.html
+++ b/src/components/application/appsco-application-actions.html
@@ -5,6 +5,7 @@
 <link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../../bower_components/iron-icons/social-icons.html">
 <link rel="import" href="../../../bower_components/paper-styles/typography.html">
+<link rel="import" href="../../../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../../../bower_components/paper-listbox/paper-listbox.html">
 <link rel="import" href="../../../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../../../bower_components/paper-tooltip/paper-tooltip.html">
@@ -13,7 +14,6 @@
 <link rel="import" href="../../../bower_components/neon-animation/animations/fade-in-animation.html">
 <link rel="import" href="../../../bower_components/neon-animation/animations/fade-out-animation.html">
 
-<link rel="import" href="../../../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../components/appsco-search.html">
 
 <!--
@@ -176,6 +176,23 @@ Custom property | Description | Default
             <appsco-search id="appscoSearch"
                            label="Search resources"></appsco-search>
         </div>
+
+        <template is="dom-if" if="[[ !company ]]">
+            <div class="action flex-none">
+                <paper-dropdown-menu on-iron-activate="_onFilterItemsAction"
+                                     horizontal-align="right"
+                                     no-label-float>
+                    <paper-listbox id="filterItemsList"
+                                   class="dropdown-content filter"
+                                   selected="0">
+                        <template is="dom-repeat" items="[[ _filterItems ]]">
+                            <paper-item value$="[[ item.value ]]"
+                                        name$="[[ item.name ]]">[[ item.name ]]</paper-item>
+                        </template>
+                    </paper-listbox>
+                </paper-dropdown-menu>
+            </div>
+        </template>
 
         <template is="dom-if" if="[[ company ]]">
             <div class="action bulk-action flex-none">
@@ -564,6 +581,21 @@ Custom property | Description | Default
                 this.fire('share-to-group');
             },
 
+            _onFilterItemsAction: function(event) {
+                event.stopPropagation();
+
+                /**
+                 * Fired when filter items is selected
+                 *
+                 * @event filter-items
+                 * @param {Object} filter {id: filter_id, name: filter_name}
+                 */
+                this.fire('filter-items', {
+                    id: event.detail.item.getAttribute('value'),
+                    name: event.detail.item.getAttribute('name')
+                });
+            },
+
             /**
              * Sets focus on search input field.
              */
@@ -642,6 +674,7 @@ Custom property | Description | Default
 
             reset: function() {
                 this.$.appscoSearch.reset();
+                this.$$('#filterItemsList').selected = 0;
 
                 if (this.company) {
                     this.hideBulkActions();
