--- a/src/components/get-started/appsco-tutorial-behaviour.html
+++ b/src/components/get-started/appsco-tutorial-behaviour.html
@@ -51,6 +51,10 @@
 
         getName: function() {
             return this.name;
+        },
+
+        isDone: function() {
+            return this.status === 'DONE';
         }
 
     }
