DASH-3525 add progress logic and content

--- a/src/components/get-started/appsco-tutorial-progress.html
+++ b/src/components/get-started/appsco-tutorial-progress.html
@@ -1,4 +1,6 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
 
 <dom-module id="appsco-tutorial-progress">
     <template>
@@ -9,12 +11,15 @@
                 color: var(--header-text-color);
                 position: absolute;
                 top: 140px;
-                right: 100px;
+                right: 0px;
                 z-index: 9000;
                 opacity: 0.7;
                 padding: 0;
                 margin: 0;
-                @apply(--shadow-elevation-2dp);
+                @apply(--shadow-elevation-4dp);
+            }
+            :host .progress-container:hover{
+                opacity:1;
             }
             .head{
                 display: inline-block;
@@ -23,12 +28,35 @@
             .head:first-child {
                 border-right: 1px solid white;
             }
+            .progress {
+                border-top: 1px solid white;
+                padding: 10px 10px 10px 6px;
+            }
+            .tut-item {
+                padding: 5px;
+            }
+            .tut-name {
+                padding: 10px 10px;
+            }
         </style>
         <template is="dom-if" if="{{ show }}">
-            <div class="progress-container" on-click="hideProgress">
+            <div class="progress-container" on-mouseover="_showProgressContent" on-mouseout="_hideProgressContent">
                 <div>
                     <div class="head">{{ progress }}%</div>
                     <div class="head">AppsCo setup progress</div>
+                </div>
+                <div class="progress" hidden="[[ _hiddenContent ]]">
+                    <template is="dom-repeat" items="{{ _tutorialsList }}">
+                        <div class="tut-item">
+                            <template is="dom-if" if="[[ item.done ]]">
+                                <iron-icon icon="icons:check-circle"></iron-icon>
+                            </template>
+                            <template is="dom-if" if="[[ !item.done ]]">
+                                <iron-icon icon="icons:radio-button-unchecked"></iron-icon>
+                            </template>
+                            <span class="tut-name">{{ item.name }}</span>
+                        </div>
+                    </template>
                 </div>
             </div>
         </template>
@@ -39,7 +67,7 @@
             is: 'appsco-tutorial-progress',
 
             properties: {
-                show: {
+                _show: {
                     type: Boolean,
                     value: false,
                     notify: true
@@ -52,30 +80,64 @@
 
                 tutorials: {
                     type: Object,
-                    value: function () { return {}; },
+                    value: function () {
+                        return {}
+                    },
                     notify: true,
                     observer: "_tutorialsChanged"
+                },
+
+                _hiddenContent: {
+                    type: Boolean,
+                    value: true
+                },
+
+                _tutorialsList: {
+                    type: Array,
+                    computed: "_computeTutorialsList(tutorials)"
                 }
+
             },
 
             _tutorialsChanged: function(newValue, oldValue) {
                 this.progress = 0;
                 var finishedTuts = numOfTuts = 0;
                 for(property in newValue) {
-                    this.numOfTuts++;
-                    if(newValue.hasOwnProperty(property) && newValue.isDone()) {
+                    numOfTuts++;
+                    if(newValue.hasOwnProperty(property) && newValue[property].isDone()) {
                         finishedTuts++;
                     }
                 }
                 this.progress = numOfTuts <= 0 ? 0 : Math.round(100*finishedTuts/numOfTuts);
             },
 
+            _computeTutorialsList: function (tutorials) {
+                var list = [];
+                for(id in tutorials) {
+                    if(tutorials.hasOwnProperty(id)) {
+                        list.push({
+                            name: tutorials[id].getName(),
+                            done: tutorials[id].isDone()
+                        });
+                    }
+                }
+                return list;
+            },
+
             showProgress: function() {
-                this.show = true;
+                this._show = true;
             },
 
             hideProgress: function() {
-                this.show = false;
+                this._show = false;
+            },
+
+            _showProgressContent: function() {
+                this._hiddenContent = false;
+            },
+
+            _hideProgressContent: function() {
+                this._hiddenContent = true;
             }
         });
     </script>
