DASH-3514 [Frontend] Create Getting started page

--- a/src/components/get-started/appsco-tutorial-behaviour.html
+++ b/src/components/get-started/appsco-tutorial-behaviour.html
@@ -176,6 +176,12 @@
                 status: this.status,
                 step: this.step,
                 maxSteps: this.maxSteps,
+                title: this.tutorialTitle,
+                description: this.description,
+                icon: this.icon,
+                documentation: this.documentation,
+                isDone: this.isDone,
+                getName: this.getName,
                 name: this.name
             };
         },
